spacing issues

--- a/server/public/styles/sass/main.scss
+++ b/server/public/styles/sass/main.scss
@@ -117,12 +117,12 @@ button {
   li.contacts {
     display: block;
     float: right;
-    padding: 2rem 1%;
+    padding: 2rem 0;
     margin: 0;
     width: calc(14% - 2px);
     border-left: solid 1px $white;
     a {
-      margin: 0 1rem;
+      margin: 0 1vw;
       cursor: pointer;
       color: $white;
       transition: all 0.2s ease;
